@@ -2417,12 +2417,6 @@ password=P@ssW0rd!
                 <td>No</td>
                 <td>used for authentication.</td>
             </tr>
-            <tr>
-                <td>checkExternals</td>
-                <td>No</td>
-                <td>whether any subversion externals this project uses should also
-                be checked for modifications.</td>
-            </tr>            
             </tbody>
         </table>
         </div>
@@ -4379,6 +4373,12 @@ password=P@ssW0rd!
                 <td>No</td>
                 <td>Set this property if a file has been deleted.  For use in
                 conditionally controlling the build later.</td>
+            </tr>
+            <tr>
+                <td>checkExternals</td>
+                <td>No</td>
+                <td>whether any subversion externals this project uses should also
+                be checked for modifications.</td>
             </tr>
             </tbody>
         </table>
